--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </div>
                     <!--//item-->
                     <div class="item">
-                      <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelors in Computers Application</h3>
+                      <h3 class="title"><i class="fa fa-graduation-cap"></i> Bachelors in Computer Application</h3>
                       <h4 class="university">IGNOU <span class="year">(2005-2009)</span></h4>
                     </div>
                     <!--//item-->
