--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Responsive HTML5 Website Landing Page for Developers">
-        <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+        <meta name="description" content="Deepak Jha's Website">
+        <meta name="keywords" content="Deepak Jha, Deepak kumar Jha,@deepakjha,@dipujha63,@fernsnpetals">
+        <meta name="author" content="Deepak Jha">
         <link rel="shortcut icon" href="favicon.ico">
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
