--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="//plus.google.com/u/1/+DeepakJhaD"><i class="fa fa-google-plus"></i></a></li>
                 <li><a href="//linkedin.com/in/deepak-kumar-jha"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="//github.com/Deepakjha87"><i class="fa fa-github-alt"></i></a></li>
-                <li class="last-item"><a href="#"><i class="fa fa-hacker-news"></i></a></li>
+                <li class="last-item"><a href="https://www.facebook.com/crazyyyymind"><i class="fa fa-facebook"></i></a></li>
               </ul>
             </div>
             <!--//profile-->
