--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
               <h1 class="name">Deepak Jha</h1>
-              <h2 class="desc">Devops Engineer</h2>
+              <h2 class="desc">Senior Software Engineer</h2>
               <ul class="social list-inline">
                 <li><a href="//twitter.com/dipujha63"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="//plus.google.com/u/1/+DeepakJhaD"><i class="fa fa-google-plus"></i></a></li>
