--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <div class="content">
                     <p>I strongly believe that "Every work is possible and we can most difficult tasks". Then why we fail in our task. I thought the reason is planning and willingness.</p>
                     <p>I always try to improve my knowledge and skill. Work that supports my family, friend and country I always select those work. That is my thought now here is my personal info.</p>
-                    <p>Now I am working in eCommerce company as a Devops Engineer.</p>
+                    <p>Now I am working in eCommerce company as a Senior Software Engineer.</p>
                   </div>
                   <!--//content-->
                 </div>
@@ -92,7 +92,7 @@
                   <h2 class="heading">Work Experience</h2>
                   <div class="content">
                     <div class="item">
-                      <h3 class="title">Devops Engineer- <span class="place"><a href="https://www.fnp.com/">fernsnpetals Pvt. Ltd :</a></span> <span class="year">(2014 - Present)</span></h3>
+                      <h3 class="title">Senior Software Engineer- <span class="place"><a href="https://www.fnp.com/">fernsnpetals Pvt. Ltd :</a></span> <span class="year">(2014 - Present)</span></h3>
                       <p>Providing direct support & development of the software applications, involving all phases of the software development life cycle (SDLC) for development functions related to large complex applications & software programs.</p>
                     </div>
                   </div>
