--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <meta name="description" content="Deepak Jha's Website">
         <meta name="keywords" content="Deepak Jha, Deepak kumar Jha,@deepakjha,@dipujha63,@fernsnpetals">
         <meta name="author" content="Deepak Jha">
+        <meta name="google-site-verification" content="ekknKNpikoYf67IBiuj7Gu9XwmcoZ1-ys5IlX8LAcQE" />
         <link rel="shortcut icon" href="favicon.ico">
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
